[package]
name = "dblade"
version = "0.1.0"
edition = "2021"

[dependencies]
curl = "0.4.44"
dotenv = "0.15"
serde_json = "1.0.104"
serde = { version = "1.0", features = ["derive"] }
zeroize = "1.5.6"
uuid = { version = "0.4", features = ["serde", "v4"] }
chacha20poly1305 = { version = "0.10", features = ["stream"] }
blake3 = "1.4.0"
digest = "0.10.7"
block-modes = "0.8.1"
hkdf = "0.12"
pbkdf2 = "0.12.2"
chrono = "0.4.26"
argon2 = "0.5.1"
rand = "0.7"
hex = "0.4.3"
rpassword = "7.2.0"
